[package]
name = "abyss"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
scraper = "0.18"
hickory-resolver = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
x509-parser = "0.15"
tokio-rustls = "0.24"
rustls = "0.21"
webpki-roots = "0.25"
murmur3 = "0.5.2"
base64 = "0.22.1"
