[package]
name = "abyss"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
scraper = "0.22"
hickory-resolver = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
regex = "1.11"
colored = "3.0"
murmur3 = "0.5.2"
base64 = "0.22.1"
chrono = "0.4"
once_cell = "1.20"